# PineBioML

./: LICENSE  Pipfile  README.md  README_old.md  example_BasicUsage multi class.ipynb  example_BasicUsage regression.ipynb  example_BasicUsage.ipynb  example_Pine.ipynb  example_PineLine.ipynb  example_PipeLine regression.ipynb  example_PipeLine.ipynb  example_Proteomics copy.ipynb  example_Proteomics.ipynb  example_UsingExistingModel.ipynb  example_feature_selection copy.ipynb  example_feature_selection dev.ipynb  example_feature_selection.ipynb  example_usage.ipynb  log.txt  note.txt  package_test.ipynb  pyproject.toml  requirements.txt  setup.py  strategyI ccrcc.ipynb  strategyII ccrcc.ipynb  strategyIII ccrcc.ipynb  strategyIV ccrcc.ipynb  strategyV ccrcc.ipynb  views.py
.ipynb_checkpoints/: example_BasicUsage multi class-checkpoint.ipynb  example_Pine-checkpoint.ipynb
PineBioML/: __init__.py
PineBioML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
documents/: example_PipeLine.py  main.md  requirements.txt
examples/: example_BasicUsage multi class.ipynb  example_BasicUsage regression.ipynb  example_Pine.ipynb  example_PipeLine.ipynb  example_Proteomics.ipynb
home/: requirements.txt
images/: desktop.ini
input/: OV_proteomics_gene_abundance_log2_reference_intensity_normalized_Normal.txt  UCEC_proteomics_gene_abundance_log2_reference_intensity_normalized_Normal.txt  example_data.xlsx  example_group1.csv  example_group2.tsv
output/: CCRCC  g_prophiler.csv  CCRCC  importance.csv  CCRCC  important feature.csv  CCRCC  rbfSVM_performance.csv  (+66 more)
(+233 files in other folders)
